src/test/deca/syntax/invalid/LE/Extension1.deca
//test invalide
//manque un extends

class C1 {
    int a ;
    void C1 (int b ) {
        a = b ;
    }
}

class C2 C1 {

}